# setup

./: conf.py  setup.cfg  setup.py
setup/: __about__.py
