[metadata]
setup_requires = pytest-runner
url = https://github.com/limix/pandas-plink
license = MIT
keywords = plink reader genetics

[metadata:cffi]
modules = pandas_plink/builder.py:ffibuilder

[metadata:entry_points]
console_scripts = limix=limix.cmdlimix:entry_point

[aliases]
test=pytest

[tool:pytest]
addopts = -x --pep8 --doctest-modules --doctest-glob='*.rst'
norecursedirs = .eggs .git *.egg-info build
pep8ignore = E402 E501
